# CERT-ification

./: .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
cellpilot/: __init__.py  agent.py  data.py  design.py  fit.py  ingest.py  model.py  optimize.py  realdata.py  residual.py  schema.py  tools.py
data/: REAL_DATA.md
data/ieks_9batches/: feed_bolus.csv  feed_cont.csv  measurements.csv  variable_info.json
scripts/: active_learning.py  demo.py  evaluate.py
tests/: test_cellpilot.py
