[project]
name = "cellpilot"
version = "0.1.0"
description = "Agentic media-optimization copilot for cell culture — a v0 of Tolemy's Orbit / aiMOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pydantic>=2.5",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# ML residual + Bayesian optimization
ml = ["xgboost>=2.0", "scikit-optimize>=0.10"]
# Agentic layer
agent = ["anthropic>=0.40"]
# Scientist-facing demo
app = ["streamlit>=1.30", "plotly>=5.18", "matplotlib>=3.8"]
# Dev tooling
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cellpilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
